# Sample-Ros-Workspace-with-dependency-management

./: .cmake-format.yaml  .gitignore  README.md
src/main/: CMakeLists.txt  package.xml
src/main/cmake/configs/: mainConfig.cmake
src/main/include/: Main.h
src/main/src/: Main.cpp
src/sub/: CMakeLists.txt
src/sub/cmake/: CPM.cmake
src/sub/cmake/configs/: subConfig.cmake
src/sub/include/: Test.h
src/sub/src/: Test.cpp
src/super/: CMakeLists.txt  package.xml
src/super/src/: Main.cpp
