# ######################################################################################################################
# Preamble
# ######################################################################################################################
cmake_minimum_required(VERSION 3.25)

project(super LANGUAGES CXX)

# ######################################################################################################################
# Project Wide Setup
# ######################################################################################################################
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# ######################################################################################################################
# Dependencies
# ######################################################################################################################
find_package(ament_cmake REQUIRED)

find_package(main REQUIRED)
# ######################################################################################################################
# Main targets
# ######################################################################################################################
# Targets
add_executable(super)
target_sources(super PRIVATE "src/Main.cpp")
target_link_libraries(super PUBLIC main::main)

ament_package()